<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<LinearLayout android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".InstructorFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_name"
        android:hint="@string/course_id_hint"
        style="@style/EditTextStyle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_title"
        android:hint="@string/course_short_desc_hint"
        style="@style/EditTextStyle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_office"
        android:hint="@string/course_long_desc_hint"
        style="@style/EditTextStyle"
        android:lines="5"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_email"
        android:hint="@string/prereqs_hint"
        style="@style/EditTextStyle"
        android:lines="3"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_image" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_button"
        android:id="@+id/instructor_add_button"
        android:layout_gravity="right"/>

</LinearLayout>
    </ScrollView>
